# stm32h753zi

./: .cppcheck-suppressions  .editorconfig  .env.template  .flake8  .gitattributes  .gitignore  .mxproject  .pylintrc  .status_context.json  .workflow_config  API_UI_DOMAIN_REPORT.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COMMUNICATION_DOMAIN_REPORT.md  CORE_SOFTWARE_DOMAIN_REPORT.md  HARDWARE_DOMAIN_REPORT.md  LICENSE  MOTOR_TUNING_COMPREHENSIVE_EVALUATION.md  Makefile.uart_test  PLL_ERRATA_ANALYSIS.md  README.md  REALTIME_DEBUG_ANALYSIS.md  REALTIME_DEBUG_CONCLUSIONS.md  SAFETY_COMPLIANCE_ASSESSMENT_REPORT.md  SAFETY_RT_DOMAIN_REPORT.md  SIMULATION_TESTING_DOMAIN_REPORT.md  STATUS.md  STATUS_STREAMLINED.md  STM32H753XX_FLASH.ld  STM32H753ZI_Debug_Report_20250815_152559.md  STM32H753ZI_REGISTER_ANALYSIS_REPORT.md  VS_CODE_WORKFLOW_TASKS.md  WORKFLOW_QUICK_REFERENCE.md  WORKSPACE_STATUS.md  algorithm_analysis.json  analyze_pll_result.py  blind_evaluation_final_report.md  build.ninja  build_run_log.txt  (+37 more)
.copilot-tasks/: generate_docs.md  regenerate_docs.md
.devcontainer/: Dockerfile  devcontainer.json  install_googletest.sh  setup_ollama_gpu.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: ssot-verification.md
api/: can_api.yaml  openapi.yaml
archive/: README.md
bootloader/: README.md
build_host_tests/: .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  build.ninja  cmake_install.cmake  test_phase1_3_validation_host  test_safety_systems_hal_abstracted_host
build_host_tests.bak/: .ninja_deps  .ninja_log  build.ninja  unity_host.lib
build_uart_test/: CMakeLists.txt
cmake/: arm-none-eabi-gcc.cmake  gcc-arm-none-eabi.cmake  starm-clang.cmake
config/: workflow_toolchain.json  workflow_toolchain.local.json.example
docs/: ADVANCED_RTOS_FEATURES_COMPREHENSIVE_GUIDE.md  API_AUDIT_REPORT.json  CMAKE_KIT_SETUP.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_ANALYSIS_STUBS_TODOS_INCOMPLETE.md  COMPREHENSIVE_ERROR_RESOLUTION_REPORT.md  COPILOT_CONTEXT_SUMMARY.md  COPILOT_INTEGRATION_SUCCESS_SUMMARY.md  CUBEMX_CLI_INTEGRATION_GUIDE.md  CUBEMX_CLI_READY.md  CUBEMX_CONFIGURATION_UPDATE.md  CUBEMX_CORRECTION_CHECKLIST.md  CUBEMX_IMMEDIATE_ACTIONS_COMPLETE.md  CUBEMX_INTEGRATION_SUMMARY.md  CUBEMX_PERIPHERAL_INTEGRATION_PLAN.md  CURRENT_DEVELOPMENT_STATUS.md  DEVELOPER_HANDBOOK.md  DEVELOPMENT_PROGRESS_SUMMARY.md  DOCUMENTATION_CONVERSION_ANALYSIS.md  DOCUMENTATION_UPDATE_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Doxyfile  ENHANCED_DOCUMENTATION_SUMMARY.md  ENHANCED_INSTRUCTION_SYSTEM.md  FTR-042-HW-CMSIS-UART-HANDOFF.md  IMPORT_ISSUES_FIXED.md  INFRASTRUCTURE_COMPLETE.md  INSTRUCTION_COMPLIANCE_ANALYSIS.md  INSTRUCTION_FILES_UPDATE_SUMMARY.md  INSTRUCTION_INVESTIGATION_RESULTS.md  NUCLEO_BSP_CONVERSION_COMPLETE.md  PEER-LEVEL_TECH_RPT.md  PHASE1_FREERTOS_IMPLEMENTATION_PLAN.md  PHASE2_CUSTOM_TASK_IMPLEMENTATION_PLAN.md  PHASE_1_3_COMPLETE.md  PHASE_1_3_VALIDATION_REPORT.json  PHASE_1_4_QUICK_REFERENCE.md  README-peripherals.md  README.md  RECENT_PROGRESS_SUMMARY.md  (+36 more)
drivers/: README.md
features/: feature_registry.json
host_tests/: CMakeLists.txt
middleware/: README.md
prompts/: github_system.md
reports/: halt_inspect_2025-08-21.txt  session_summary_2025-08-21.md  ssot_audit.json
rtos/: README.md
schemas/: as5600_registers.yaml  l6470_registers.yaml
scripts/: Get-WorkflowToolchain.ps1  README-uart-dma-test.md  README-uart-probe.md  README.generate_docs_runner.md  README.regenerate_status.md  RTOS_MIGRATION_INSTRUCTIONS.md  STM32Workflow_Clean.psm1  aggregate_decls.py  analyze_enhanced_clock_fix.py  analyze_pll.ps1  analyze_rcc_registers.py  apply_hse_fix.ps1  archive_guides.sh  ast_verify_types.py  auto_update_changelog.py  auto_update_status.py  beast_semantic_search.py  build_wsl2_host_tests.ps1  change_detector.py  check_braces.py  check_rtos_compatibility.py  chunk_stm32_docs.py  collection_manager.py  comprehensive_repo_cleanup.sh  convert_nucleo_bsp_docs.py  create_basic_project.py  create_nucleo_bsp_index.py  create_project_structure.py  cubemx_config_generator.py  cubemx_generate_code.script  cubemx_project.script  debug_pll.ps1  debug_pll.sh  debug_system_fault.ps1  demo_status_integration.sh  documentation_manager.py  embedding_model_config.py  embedding_model_usage.py  enhance_status_context.py  enhanced_hse_fix.ps1  (+95 more)
src/simulation/: CMakeLists.txt  hardware_simulation.c  hardware_simulation.h  motor_simulation.c  motor_simulation.h
tests/: CMakeLists.txt  README.md  TELEMETRY_TEST_INFRASTRUCTURE_EVALUATION.md  test_api_stubs.h.disabled  test_hal_abstraction_integration.c  test_mock_safety_events.c  test_simulation.c
tests/copilot_integration/: test_api_scope.h  test_copilot_integration.md  test_overlap_controllers.c
tests/fixtures/: test_config.h.in
tests/host_tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_emergency_stop_unity  test_hal_abstraction_basic.c  test_hal_abstraction_basic_corrected.c
tests/host_tests/Testing/Temporary/: CTestCostData.txt
tests/integration/: test_semantic_performance.py
tests/mocks/: host_safety_stubs.c  mock_drivers.c  mock_drivers.h  mock_gpio.c  mock_hal.c  mock_hal.h  mock_hal_abstraction.c  mock_hal_abstraction.h  mock_hal_types.h  stm32h7xx.h  stm32h7xx_hal.h  stm32h7xx_hal_def.h  stm32h7xx_hal_tim.h  test_hooks.c
tests/unit/: test_basic_safety.c  test_basic_safety.c.disabled  test_comm_protocol_edge_cases.c  test_emergency_stop.c  test_emergency_stop_unity.c  test_fault_monitor.c  test_hal_abstraction_edge_cases.c  test_l6470_register_programming.c  test_motion_profile_edge_cases.c  test_motor_characterization.c  test_motor_efficiency_optimizer.c  test_optimization_telemetry.c  test_phase1_3_validation.c  test_safety_gtest.cpp  test_safety_systems.c  test_safety_systems_hal_abstracted.c  test_simulation_framework_edge_cases.c  test_telemetry_dashboard.c  test_watchdog.c.disabled
(+2107 files in other folders)
